# fastapi-admin-template

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json
app/: admin.py  auth_provider.py  main.py  models.py
app/core/: config.py  database.py
app/static/admin/css/: custom.css
app/static/admin/js/: custom.js
app/templates/admin/: base.html  home.html
migrations/: env.py
migrations/versions/: 2025_02_02_1259-014549339ee1_init_users.py
