[project]
name = "fastapi-admin-template"
version = "0.1.0"
description = "FastAPI Admin Template"
dependencies = [
    "alembic>=1.12.1",
    "authlib>=1.4.1",
    "fastapi>=0.104.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.11",
    "starlette-admin>=0.14.1",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.3",
    "pytest>=7.4.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
